; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_section_name_state.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_section_name_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i32 }

@LINE_START = common dso_local global i32 0, align 4
@COMMENT = common dso_local global i32 0, align 4
@ERROR_BAD_SECTION_NAME_LINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.parser*, i8*)* @section_name_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @section_name_state(%struct.parser* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.parser*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.parser* %0, %struct.parser** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  store i8* %7, i8** %6, align 8
  br label %8

8:                                                ; preds = %37, %2
  %9 = load %struct.parser*, %struct.parser** %4, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @is_eol(%struct.parser* %9, i8* %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br i1 %13, label %14, label %40

14:                                               ; preds = %8
  %15 = load i8*, i8** %6, align 8
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 93
  br i1 %18, label %19, label %36

19:                                               ; preds = %14
  %20 = load %struct.parser*, %struct.parser** %4, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @push_token(%struct.parser* %20, i8* %21)
  %23 = load %struct.parser*, %struct.parser** %4, align 8
  %24 = call i32 @add_section_from_token(%struct.parser* %23)
  %25 = icmp eq i32 %24, -1
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  store i8* null, i8** %3, align 8
  br label %44

27:                                               ; preds = %19
  %28 = load %struct.parser*, %struct.parser** %4, align 8
  %29 = load i32, i32* @LINE_START, align 4
  %30 = call i32 @push_state(%struct.parser* %28, i32 %29)
  %31 = load %struct.parser*, %struct.parser** %4, align 8
  %32 = load i32, i32* @COMMENT, align 4
  %33 = call i32 @set_state(%struct.parser* %31, i32 %32)
  %34 = load i8*, i8** %6, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 1
  store i8* %35, i8** %3, align 8
  br label %44

36:                                               ; preds = %14
  br label %37

37:                                               ; preds = %36
  %38 = load i8*, i8** %6, align 8
  %39 = getelementptr inbounds i8, i8* %38, i32 1
  store i8* %39, i8** %6, align 8
  br label %8

40:                                               ; preds = %8
  %41 = load i32, i32* @ERROR_BAD_SECTION_NAME_LINE, align 4
  %42 = load %struct.parser*, %struct.parser** %4, align 8
  %43 = getelementptr inbounds %struct.parser, %struct.parser* %42, i32 0, i32 0
  store i32 %41, i32* %43, align 4
  store i8* null, i8** %3, align 8
  br label %44

44:                                               ; preds = %40, %27, %26
  %45 = load i8*, i8** %3, align 8
  ret i8* %45
}

declare dso_local i32 @is_eol(%struct.parser*, i8*) #1

declare dso_local i32 @push_token(%struct.parser*, i8*) #1

declare dso_local i32 @add_section_from_token(%struct.parser*) #1

declare dso_local i32 @push_state(%struct.parser*, i32) #1

declare dso_local i32 @set_state(%struct.parser*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
